# GraphQLFederation

./: .gitignore  Cargo.toml  Makefile.toml  Readme.md  docker-compose.yaml  run.sh
.keycloak_data/h2/: keycloakdb..mv.db.bck  keycloakdb.lock.db  keycloakdb.mv.db  keycloakdb.trace.db  keycloakdb.trace.db.bck
deployment/k8s/apollo/: deployment.yaml
deployment/k8s/keycloak/: Readme.md  values.yaml
deployment/schema/: router.yaml
proccrate/: Cargo.toml
proccrate/src/: lib.rs
shared/: Cargo.toml
shared/src/: shared.rs  warp.rs
shared/src/auth/: error.rs  mod.rs
shared/src/macros/: mod.rs
src/: main.rs
subgraph1/: Cargo.toml  deploy.sh  publishsubgraph.sh  template.yaml
subgraph1/config/: Development.toml  Production.toml
subgraph1/src/: main.rs  model.rs  settings.rs
user/: Cargo.toml  deploy.sh  publishsubgraph.sh  template.yaml  user.graphql
user/config/: Production.toml
user/src/: main.rs  model.rs  settings.rs
