[package]
name = "subgraph1"
version = "0.1.0"
edition = "2021"

[dependencies]
shared =  { path = "../shared", features=["macros"] }
async-graphql = { version="5.0" }
async-graphql-warp = {version="5.0"}
lambda_http = "0.7.2"
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.1"
serde = "1.0.1"
http = "0.2.3"
warp = "0.3"
warp_lambda = "0.1"
serde_derive = "1.0.152"
config = "0.13.3"
lazy_static = "1.4.0"
chrono = "0.4.23"