[package]
name = "usersubgraph"
version = "0.1.0"
edition = "2021"



[[bin]]
name = "user"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.7.2"
aws_lambda_events = "0.7.2"
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.1"
serde = "1.0.1"
http = "0.2.3"
async-graphql = { version="5.0" }
warp = "0.3"
warp_lambda = "0.1"
lambda_http = "0.7.2"
reqwest = "*"
shared =  { path = "../shared", features=["macros"] }
serde_derive = "1.0.152"
async-graphql-warp = {version="5.0"}
config = "0.13.3"
lazy_static = "1.4.0"